templates/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-app-ingress
# spec:
#   tls:
#     - secretName: my-app-tls-secret
#       tlsVersions:
#         - TLSv1.3
#   rules:
#     - host: my-app.example.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: milal-client
#                 port:
#                   number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
